[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "code-mapper"
version = "0.1.0"
description = "Parse any codebase into a structured map of nodes, edges, and logic blocks"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = []

[project.optional-dependencies]
clustering = ["networkx>=3.0"]
ai = ["httpx>=0.24"]                         # Ollama tier 2 (--verify / --ai)
claude = ["httpx>=0.24"]                     # Claude API tier 3 (--claude)
js = [                                        # Phase 2 JS/TS via tree-sitter (--js)
    "tree-sitter>=0.21",
    "tree-sitter-javascript>=0.21",
    "tree-sitter-typescript>=0.21",
]
all = [
    "networkx>=3.0", "httpx>=0.24",
    "tree-sitter>=0.21", "tree-sitter-javascript>=0.21", "tree-sitter-typescript>=0.21",
]

[project.scripts]
code-mapper = "code_mapper.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
